[metadata]
name = happystore
version = 1.0.0
description = simple yet feature rich, pure python, embedded, key-value database with a tiny api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joedeveloper55/happystore
author = Joseph P McAnulty
author_email = 'joedeveloper55@gmail.com'
classifiers = 
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
python_requires='>=3.0'

[options]
py_modules = happystore
